--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@
 <body>
 <div id="root"></div>
 </body>
-<script src="public/bundle.js"></script>
+<script src="/public/bundle.js"></script>
 </html>
